# trans_forge

./: .gitignore  README.md  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/kv/: commands.rs  mod.rs  model.rs  service.rs
src-tauri/src/features/preset/: commands.rs  mod.rs  model.rs  service.rs
src-tauri/src/features/project/: commands.rs  manager.rs  message.rs  mod.rs  model.rs  worker.rs
src-tauri/src/features/project/io/: mod.rs  reader.rs  translator.rs  writer.rs
src-tauri/src/features/provider/: commands.rs  manager.rs  message.rs  mod.rs  model.rs  service.rs  worker.rs
src-tauri/src/features/theme/: commands.rs  model.rs  service.rs
src-tauri/src/features/translation/: commands.rs  mod.rs  model.rs
src-tauri/src/shared/: actor.rs  command.rs  database.rs  error.rs  mod.rs  state.rs
src-tauri/src/shared/common/: mod.rs
src/app/router/: index.ts
src/features/presets/: types.ts  utils.ts
src/features/presets/api/: presetBridge.ts
src/features/presets/hooks/: usePresetPage.ts  usePromptPresets.ts
src/features/projects/: types.ts  utils.ts
src/features/providers/: types.ts  utils.ts
src/shared/composables/: useMultiSelectFilter.ts  usePageDataSync.ts  useVisiblePages.ts
src/shared/constants/: index.ts
src/shared/tauri/: api.ts
src/shared/types/: theme.ts  ui.ts
src/shared/ui/: FilterDropdown.vue  ListHeaderBar.vue  PaginationBar.vue  SearchableSelect.vue
src/shared/utils/: core.ts
src/styles/: app.css
(+20 files in other folders)
