[package]
name = "trans_forge"
version = "0.1.0"
description = "AI Translation Tool"
authors = ["waitsalt"]
edition = "2024"

[lib]
name = "tran_001_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
reqwest = { version = "0.13.2", features = ["json"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
regex = "1.12.3"
once_cell = "1.21.3"
